# MSABot

./: .env  .gitignore  README.md  main.py  pyproject.toml
cogs/: cog_currency.py  cog_developer.py  cog_fancyhelp.py  cog_fun.py  cog_general.py  cog_help.py  cog_interaction.py  cog_islamic.py  cog_persistence.py  cog_ramadan.py  cog_tictactoe.py  cog_utility.py
storage/: banned.json  blacklist  compliments.txt  locations  reverse.txt  turns
