[tool.poetry]
name = "AbidBot"
version = "1.0.0"
description = "AbidBot Source Code"
authors = ["Abid Rasheed <troop129#6666>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.4"
flask = "^1.1.2"
utils = "^1.0.1"
asyncpg = "^0.22.0"
config = "^0.5.0"
pymongo = "^3.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
